5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1674_1101.log
== TEST (2019-04-25 10:20:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c)")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (t.lower()=="r"):
	
	y = "Valor total: R$ "
elif (t.lower()=="i")
-- ERROR:
File "XXXX", line 13
    elif (t.lower()=="i")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:21:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c)")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)

-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:21:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c)")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)

-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:29:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c)")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	y = "Valor total: R$ ", a
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	y = "Valor total: R$ ", a
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	y = "Valor total: R$ ", a
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	y = "Valor total: R$ ", a
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	y = "Valor total: R$ ", a
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	y = "Valor total: R$ ", a
print(y)
-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:31:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c)")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	y = 'Valor total: R$ ', a
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	y = 'Valor total: R$ ', a
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	y = 'Valor total: R$ ', a
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	y = 'Valor total: R$ ', a
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	y = 'Valor total: R$ ', a
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	y = 'Valor total: R$ ', a
print(y)
-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:31:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c)")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	y = 'Valor total: R$ ', a
	print(y)
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	y = 'Valor total: R$ ', a
	print(y)
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	y = 'Valor total: R$ ', a
	print(y)
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	y = 'Valor total: R$ ', a
	print(y)
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	y = 'Valor total: R$ ', a
	print(y)
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	y = 'Valor total: R$ ', a
	print(y)
-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:32:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	y = 'Valor total: R$ ', a
	print(y)
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	y = 'Valor total: R$ ', a
	print(y)
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	y = 'Valor total: R$ ', a
	print(y)
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	y = 'Valor total: R$ ', a
	print(y)
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	y = 'Valor total: R$ ', a
	print(y)
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	y = 'Valor total: R$ ', a
	print(y)
-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:32:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	y = 'Valor total: R$ ', a
	print(y)
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	y = 'Valor total: R$ ', a
	print(y)
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	y = 'Valor total: R$ ', a
	print(y)
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	y = 'Valor total: R$ ', a
	print(y)
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	y = 'Valor total: R$ ', a
	print(y)
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	y = 'Valor total: R$ ', a
	print(y)
-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:32:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	y = 'Valor total: R$ ', a
	print(y)
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	y = 'Valor total: R$ ', a
	print(y)
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	y = 'Valor total: R$ ', a
	print(y)
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	y = 'Valor total: R$ ', a
	print(y)
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	y = 'Valor total: R$ ', a
	print(y)
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	y = 'Valor total: R$ ', a
	print(y)
-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:33:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	print('Valor total: R$ ', a)
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	print('Valor total: R$ ', a)
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	print('Valor total: R$ ', a)
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	print('Valor total: R$ ', a)
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	print('Valor total: R$ ', a)
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	print('Valor total: R$ ', a)
-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:34:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	print('Valor total: R$ ', a)
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	print('Valor total: R$ ', a)
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	print('Valor total: R$ ', a)
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	print('Valor total: R$ ', a)
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	print('Valor total: R$ ', a)
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	print('Valor total: R$ ', a)
-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	rint('Valor total: R$ ', round(a, 2))
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	rint('Valor total: R$ ', round(a, 2))
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	rint('Valor total: R$ ', round(a, 2))
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	rint('Valor total: R$ ', round(a, 2))
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	rint('Valor total: R$ ', round(a, 2))
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	rint('Valor total: R$ ', round(a, 2))
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	rint('Valor total: R$ ', round(a, 2))
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	rint('Valor total: R$ ', round(a, 2))
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	rint('Valor total: R$ ', round(a, 2))
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	rint('Valor total: R$ ', round(a, 2))
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:39:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	print('Valor total: R$ ', round(a, 2))
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	print('Valor total: R$ ', round(a, 2))
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:39:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	print('Valor total: R$ ', round(a, 2))
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	print('Valor total: R$ ', round(a, 2))
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:39:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	print('Valor total: R$ ', round(a, 2))
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	print('Valor total: R$ ', round(a, 2))
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:39:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	print('Valor total: R$ ', round(a, 2))
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	print('Valor total: R$ ', round(a, 2))
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
-- EXECUTION TIME:
0.190215
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
-56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
955.5 kWh e tipo R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:40:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	print('Valor total: R$ ', round(a, 2))
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	print('Valor total: R$ ', round(a, 2))
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:40:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print(c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	print('Valor total: R$ ', round(a, 2))
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	print('Valor total: R$ ', round(a, 2))
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
-- OUTPUT:
-56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:40:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print("Entradas:", c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	print('Valor total: R$ ', round(a, 2))
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	print('Valor total: R$ ', round(a, 2))
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:41:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print("Entradas:", c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	print('Valor total: R$ ', round(a, 2))
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	print('Valor total: R$ ', round(a, 2))
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
-- EXECUTION TIME:
0.119285
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$  621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:53:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print("Entradas:", c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	print('Valor total: R$ ', round(a, 2))
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	print('Valor total: R$ ', round(a, 2))
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
